--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <nav>
     <a href="elements.html">Elements</a>
     <a href="bonds.html">Bonds</a>
-    <a href="polyion.html"> Poly Ions</a>
+    <a href="polygon.html"> Poly Ions</a>
   </nav>
 
   <script>
