--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <a href="elements.html">Elements</a>
     <a href="bonds.html">Bonds</a>
     <a href="polygon.html"> Poly Ions</a>
+  <a href="testing.html"> Testinggg</a>
   </nav>
 
   <script>
